--- a/jeongsang_report.html
+++ b/jeongsang_report.html
@@ -14,22 +14,22 @@
       color: #333;
     }
 
+    h1 {
+      color: #5f0080;
+      text-align: center;
+      margin-bottom: 10px;
+    }
+
     .suit-reference {
-      margin-bottom: 14px;
-      padding: 10px 14px;
+      display: block !important;
+      margin-bottom: 20px;
+      padding: 12px 14px;
       background-color: #f0e6ff;
       border: 2px solid #5f0080;
       border-radius: 8px;
       font-size: 15px;
       color: #3a0066;
-      user-select: text;
-      line-height: 1.5;
-    }
-
-    h1 {
-      color: #5f0080;
-      text-align: center;
-      margin-bottom: 20px;
+      line-height: 1.6;
     }
 
     label {
@@ -65,7 +65,6 @@
       gap: 6px;
       margin-bottom: 6px;
       cursor: pointer;
-      user-select: none;
     }
 
     .mention-list input[type="checkbox"] {
@@ -106,7 +105,6 @@
       border: none;
       border-radius: 8px;
       cursor: pointer;
-      user-select: none;
     }
 
     .copy-success {
@@ -120,12 +118,14 @@
 </head>
 <body>
 
-  <!-- 슈트 번호 참조 박스 -->
-  <div class="suit-reference" aria-label="슈트 번호 참조">
-    슈트 번호 참조: 1=Y, 2=Y, 3=U, 4=H, 5=M, 6=H, 7=PT, 8=CS, 9=GW, 10=DJ, 11=CA, 12=JE, 13=CJ롯데, 14=CJ롯데
-  </div>
-
   <h1>정상분기 보고서</h1>
+
+  <!-- ✅ 보이도록 확실히 배치한 슈트 참조 박스 -->
+  <div class="suit-reference" aria-label="슈트 번호 참조">
+    🧾 <strong>슈트 번호 참조:</strong><br>
+    1=Y, 2=Y, 3=U, 4=H, 5=M, 6=H, 7=PT, 8=CS, 9=GW, 10=DJ,<br>
+    11=CA, 12=JE, 13=CJ롯데, 14=CJ롯데
+  </div>
 
   <label for="count">정상분기 건수</label>
   <input type="number" id="count" placeholder="예: 1" min="1" value="1" />
@@ -194,18 +194,18 @@
       const zoneInputs = orderInputsContainer.querySelectorAll('.zoneInput');
       const orderPairs = [];
 
-      for(let i=0; i < count; i++){
+      for (let i = 0; i < count; i++) {
         const suit = suitInputs[i]?.value.trim();
         let zone = zoneInputs[i]?.value.trim();
-        if(suit === '' && zone === '') continue;
+        if (suit === '' && zone === '') continue;
 
-        if(zone) {
+        if (zone) {
           zone = zone.replace(/\s+/g, '') + '권역';
         }
 
         let pair = '';
-        if(suit) pair += suit + '번';
-        if(zone) pair += ' ' + zone;
+        if (suit) pair += suit + '번';
+        if (zone) pair += ' ' + zone;
         orderPairs.push(pair.trim());
       }
 
@@ -228,7 +228,7 @@ ${mentions}`;
     function copyToClipboard() {
       updateOutput();
       const text = outputBox.textContent;
-      if(!text.trim()) return alert("복사할 내용이 없습니다.");
+      if (!text.trim()) return alert("복사할 내용이 없습니다.");
 
       navigator.clipboard.writeText(text).then(() => {
         copySuccess.style.display = 'block';
@@ -242,7 +242,7 @@ ${mentions}`;
 
     countInput.addEventListener('input', () => {
       let n = parseInt(countInput.value);
-      if(isNaN(n) || n < 1) n = 1;
+      if (isNaN(n) || n < 1) n = 1;
       createOrderInputs(n);
       updateOutput();
     });
